examples/compiler_errors/header_counts/ErrorNoteBroken.flx
// skip: support or non-error companion fixture for compiler diagnostics

module ErrorNoteBroken {
    public fn one() -> Int {
        1
    }
}
